# pk

./: .pylintrc  .travis.yml  README.md  setup.cfg  setup.py  test.sh
pk/: __init__.py  base.py  github.py  npm.py  pypi.py
test/: __init__.py  test_github.py  test_npm.py  test_pypi.py
test/files/: idiosync.json  ipxe.json  leftpad.json
