[metadata]
name = pk
description = Standards-compliant package creation
author = Michael Brown
author_email = mbrown@fensystems.co.uk
url = https://github.com/mcb30/pk
license = GPLv2+
copyright = Copyright 2020 Michael Brown
classifiers = Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution
    Topic :: System :: Systems Administration
    Topic :: Utilities
